# ZeroLGR

./: .gitignore  README.md  docker-compose.yml
dashboard/: Dockerfile  nginx.conf  package-lock.json  package.json
dashboard/src/: App.tsx  index.css
dashboard/src/components/accounts/: AccountManager.tsx
dashboard/src/components/benchmark/: BenchmarkPanel.tsx
dashboard/src/components/ledger/: LedgerAuditor.tsx
dashboard/src/components/saga/: SagaTimeline.tsx
dashboard/src/hooks/: useWebSocket.ts
dashboard/src/store/: ledgerStore.ts  metricsStore.ts
engine/: CMakeLists.txt  Dockerfile
engine/include/: ledger.hpp  ring_buffer.hpp  server.hpp  types.hpp  wal.hpp
engine/schema/: ledger.fbs
engine/src/: ledger.cpp  main.cpp  server.cpp  wal.cpp
engine/tests/: test_ledger.cpp  test_ring_buffer.cpp  test_wal.cpp
gateway/: Dockerfile  config.py  main.py  requirements.txt  saga.py  stripe_handler.py  ws_streamer.py  zmq_client.py
gateway/routes/: accounts.py  benchmarks.py  ledger_view.py  transactions.py
